# hatch-playground

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  renovate.json  requirements.in  requirements.txt  sitemap.xml
.github/: dependabot.yml
.github/workflows/: build.yml  changelog.yml  check.yml  dependencies.yml  docs.yml  publish.yml  release.yml
docs/: mkdocs.md
mkdocs/: index.html
search/: search_index.json
tests/: __init__.py
