[build-system]
requires = ["hatchling", "hatch-vcs", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "hatch-playground"
description = 'Project maintenance with Hatch'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Fredrik Averpil", email = "fredrik.averpil@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version", "dependencies"]

# until Python has an officially PEP-supported lockfile mechanism,
# let's define dependencies with hatch instead, so pip-tools can be used
# to pin dependencies.
# dependencies = []

[project.urls]
Documentation = "https://github.com/fredrikaverpil/hatch-playground#readme"
Issues = "https://github.com/fredrikaverpil/hatch-playground/issues"
Source = "https://github.com/fredrikaverpil/hatch-playground"

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata.hooks.requirements_txt]
filename = "requirements.txt"

[tool.hatch.build.targets.sdist]
[tool.hatch.build.targets.wheel]
packages = ["src/hatch_playground"]

# [tool.hatch.metadata]
# allow-direct-references = true

[project.optional-dependencies]
# PEP-440
tests = [
  "pytest",
  "pytest-randomly",
  "pytest-cov",
  "pytest-mock",
  "pytest-dotenv",
  "pytest-freezegun",
  "responses",
  "factory-boy"
  # example of git+ssh dependency
  # "mypkg @ git+ssh://git@github.com/myorg/mypkg.git@main"  # direct reference (always use latest)
]
docs = [
  "mkdocs",
  "mkdocs-material",
  "mkdocs-awesome-pages-plugin",
  "mkdocs-include-markdown-plugin"
]
lint = [
  "black",
  "ruff",
]
types = [
  "mypy",
  "types-freezegun",
  "types-python-dateutil"
]
security= [
  "pip-audit",
  "pip-licenses"
]
build = [
  "build"
]
dev = [
  "hatch-playground[tests,docs,lint,types,security,build]",
  "pip-tools",
  "pre-commit",
  "debugpy"
]

[tool.ruff]
src = ["src", "tests"]
line-length = 88  # black default
select = [
    "E",  # pycodestyle (supersedes pep8)
    "W",  # pycodestyle warnings
    "D",  # pydocstyle
    "F",  # pyflakes
    "UP", # pyupgrade
    "S",  # flake8-bandit
    "B",  # flake8-bugbear
    "I",  # isort
    "N",  # pep8-naming
    "ERA",  # eradicate
    "C4",  # flake8-comprehensions
    "A",  # flake8-builtins
    "Q",  # flake8-quotes
    "YTT",  # flake8-2020
    "ANN",  # flake8-annotations
    "BLE",  # flake8-blind-except
    "FBT",  # flake8-boolean-trap
    "C90",  # mccabe
    "T10",  # flake8-debugger
    "EM",  # flake8-errmsg
    "ICN",  # flake8-import-conventions
    "T20",  # flake8-print
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "ARG",  # flake8-unused-arguments
    "PDV",  # pandas-vet
    "PGH",  # pygrep-hooks
    "PLC",  # pylint
    "PLE",  # pylint
    "PLR",  # pylint
    "PLW",  # pylint
    "RUF",  # ruff-specific rules

]
ignore = []

[tool.ruff.per-file-ignores]
"tests/*" = [
    "S101",  # assert used
    "S105"  # hardcoded password
]

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
